Updated credentials support